# ark-agentic

./: .claude-summary.md  .dockerignore  .env  .env-sample  .gitignore  CLAUDE.md  Dockerfile  README.md  a.json  architect.md  note.json  pyproject.toml  pytest_full.txt  pytest_out.txt  securities-agent-plan.md  start_test.sh
.agent/workflows/: product.md  test.md
.cursor/rules/: Python-AI-Agent.mdc
.opencode/: opencode.json
.opencode/plans/: tools_directory_refactor.md
data/ark_insurance_memory/: MEMORY.md
data/ark_sessions/: 1cb2ac5e-4e9a-4712-a46e-d87dc0eb5cea.jsonl  b455023c-503f-4273-b836-8cfe2fd8883a.jsonl  sessions.json
doc/: architect-design-research.md  architecture.md
doc/ark-agentic-studio/: changelog.md  implementation_plan.md  todo.md
docs/: account_overview_api.md  architect.tsx  architecture-c4.md  asset_overview_api.md  branch_info_api.md  cash_holdings_api.md  database-and-storage-abstraction.md  etf_holdings_api.md  hksc_holdings_api.md  securities-api-data-formats.md  service_api.md  todos.md
docs/a2ui/: a2ui-json-template-architecture.md  a2ui-modes-overview.md  a2ui-standard.md  a2ui-withdraw-plan-ui-sample.json  a2ui-withdraw-plan-ui-schema.json  a2ui-withdraw-ui-schema.json  a2ui-withdraw-ui-smaple.json  insurance-skills.md
docs/architect-viewer/: architect.tsx  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/ark-agentic-studio/: architecture.md  changelog.md  implementation_plan.md  product_analysis.md  todo.md  ui_design.md
docs/core/: a2ui-agui-design.md  agent_runtime_share_notes_qa.md  agent_runtime_share_ppt.md  architecture.md  ark_agentic_ppt_v1.md  framework_compare.md  guardrails-briefing.md  memory.md  memory_architecture_review.md  memory_design_ppt.md  multi-agent-vs-single-agent-analysis.md  refined-structure.md  架构升级方案.md
docs/plans/: 2026-03-01-agent-pages-split-design.md  2026-03-01-agent-pages-split-implementation.md  2026-03-01-securities-context-priority-design.md  2026-03-01-securities-context-priority-implementation.md  2026-03-05-insurance-withdrawal-flow-evolution-implementation.md  2026-03-10-mem0-memory-integration-design.md  2026-03-13-cli-init-enhancement-design.md  2026-03-19-securities-profit-history-design.md  2026-03-19-securities-two-skill-migration-plan.md  2026-03-21-ner-design.md  句级流式频率控制_d3402231.plan.md
docs/postman/: ark-agentic-api.postman_collection.json
docs/securities/: api.md  asset_profit_hist_api.md  fund_holdings_api.md  securities-api-data-formats.md  stock_daily_profit_api.md  stock_profit_ranking_api.md
mirror-lake/: readme.md
mirror-lake/echos-agents/: architect.md  review.md
mirror-lake/reviews/: storage-architecture-deep-review.md
mirror-lake/ripples-tasks/: willis-auto-tasks.md
plans/: account_overview_refactor_plan.md  anti_hallucination_design.md  anti_hallucination_draft.md  anti_hallucination_new.md  anti_hallucination_refine.md  cash_assets_refactor_plan.md  context_flat_structure_fix.md  etf_holdings_refactor_plan.md  flow_dsl_refactor.md  flow_refactor_todo.md  hksc_holdings_refactor_plan.md  legacy_cleanup_plan.md  refine_holding_analysis.md  security_info_search.md  skill_refine_simple_version.md  taskflow_design.md  tool_consolidation_and_profit_inquiry_extension.md  tools_directory_refactor.md
postman/: ark-agentic-api.postman_collection.json
scripts/: Building  Version:  gen_seed_data.py  migrate_agent_state_dotfiles.py  migrate_file_to_sqlite.py  publish.cmd  publish.ps1  publish.sh  test_subtask_e2e.py  update_mock_data_to_str.py
scripts/migrations/: __init__.py  dotfiles.py  file_to_sqlite.py
sevals/: README.md  conftest.py  test_insurance.py
sevals/reports/: 2026-04-29_10-57-16.html  2026-04-29_15-14-01.html
sevals/runner/: __init__.py  agent_factory.py  case_loader.py  reporter.py  scorer.py
src/ark_agentic/: __init__.py  app.py  bootstrap.py  patch.py
tests/: __init__.py  conftest.py  integration_log.txt  test_agent_integration.py  test_api_models.py  test_app_integration.py  test_context_injection.py  test_history_merge.py  test_memory_e2e.py  test_phase1.py  test_registry.py  test_schema_str_coercion.py  test_securities_integration.py  test_session_context.py  test_setup_studio_from_env.py  test_skill_service.py  test_skills_integration.py  test_sse_template.py  test_static_index_render_contract.py  test_studio_agents.py  test_studio_sessions_memory.py  test_studio_skills.py  test_studio_tools.py  test_tool_service.py
tests/agents/: __init__.py
tests/cli/: test_cli.py
tests/core/: __init__.py  test_a2ui_contract_models.py  test_a2ui_guard.py  test_a2ui_renderer.py  test_block_composer.py  test_chunker.py  test_compaction.py  test_demo_a2ui.py  test_dynamic_a2ui.py  test_event_bus.py  test_extractor.py  test_langchain_pa_models.py  test_langchain_simple.py  test_llm_from_env.py  test_llm_internal.py  test_llm_pa_internal.py  test_memory_tools.py  test_output_formatter.py  test_pa_knowledge_api.py  test_persistence.py  test_prompt.py  test_pycryptodome_optional.py  test_pycryptodome_simple.py  test_render_a2ui.py  test_render_a2ui_card_type.py  test_render_card_tool.py  test_run_options_validation.py  test_runner.py  test_runner_concurrency.py  test_runner_concurrency_langchain.py  test_runner_skill_load_mode.py  test_session.py  test_skills.py  test_sqlite_store.py  test_stream.py  test_thinking_tag_parser.py  test_tools.py  test_types.py  test_user_profile.py
tests/e2e/: test_memory_e2e.py  test_subtask_e2e.py
tests/integration/: test_agent_integration.py  test_app_integration.py  test_chat_api.py  test_context_injection.py  test_factory_backend_switching.py  test_graceful_fallback.py  test_mcp_runtime.py  test_mcp_service.py  test_migrate_file_to_sqlite.py  test_pycryptodome_fix.py  test_securities_integration.py  test_session_meta_index.py  test_setup_studio_from_env.py  test_skill_service.py  test_skills_integration.py  test_studio_agents.py  test_studio_config.py  test_studio_dashboard_summary.py  test_studio_sessions_memory.py  test_studio_skills.py  (+2 more)
(+1046 files in other folders)
