[project]
name = "ark-agentic"
version = "0.2.5.1"
description = "Lightweight ReAct agent framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "akshare>=1.18.43",
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.3",
    "pypinyin>=0.55.0",
    "flashtext>=2.7",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]
dev = [
    "ark-agentic[server]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
]
pa-jt = [
    "pycryptodome>=3.20.0",
]
memory = [
    "sqlite-vec>=0.1.6",
    "jieba>=0.42.1",
    "sentence-transformers>=3.3.0",
]
all = [
    "ark-agentic[dev,pa-jt,memory]",
]

[project.scripts]
ark-agentic = "ark_agentic.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ark_agentic"]
exclude = [
    "src/ark_agentic/agents/insurance",
    "src/ark_agentic/agents/securities",
    "src/ark_agentic/app.py",
    "src/ark_agentic/static",
    "src/ark_agentic/studio/frontend/node_modules",
    "src/ark_agentic/studio/frontend/src",
]

[tool.hatch.build.targets.sdist.force-include]
"src/ark_agentic/studio/frontend/dist" = "src/ark_agentic/studio/frontend/dist"

[tool.hatch.build.targets.wheel.force-include]
"src/ark_agentic/studio/frontend/dist"       = "ark_agentic/studio/frontend/dist"
"src/ark_agentic/agents/meta_builder/skills" = "ark_agentic/agents/meta_builder/skills"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# 防止单个用例死循环/阻塞 IO 拖死「全量测试」；真慢用例应拆 integration 或 mock
timeout = 180
markers = [
    "slow: 故意慢的集成测试；快速门禁可加 -m \"not slow\"",
]

[tool.pyright]
extraPaths = ["src"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "twine>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
]
securities = [
    "rapidfuzz>=3.14.3",
    "pypinyin>=0.55.0",
]
